[tool.poetry]
name = "graphene_django_tools"
version = "0.19.4"
description = "Tools for use [`graphene-django`](https://github.com/graphql-python/graphene-django)"
authors = ["NateScarlet <NateScarlet@Gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NateScarlet/graphene-django-tools"
documentation = "https://github.com/NateScarlet/graphene-django-tools/tree/master/docs"
keywords = ["graphene", "django", "graphql"]
classifiers = [
    'Framework :: Django :: 2.1',
    'Framework :: Django :: 2.2',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.7"
graphene = "^2.1"
isodate = "^0.6"
graphene-django = "^2.2, <2.6.0" #https://github.com/graphql-python/graphene-django/issues/792
lazy-object-proxy = "^1.4"
graphene-resolver = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^3.7"
pytest-cov = "^2.8"
autopep8 = "^1.4"
rope = "^0.14"
pylint = "^2.4"
pylint-django = "^2.0"
django = "^2.2"
django-filter = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
