[tool.poetry]
name = "graphene_django_tools"
version = "0.20.0"
description = "Tools for use [`graphene-django`](https://github.com/graphql-python/graphene-django)"
authors = ["NateScarlet <NateScarlet@Gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NateScarlet/graphene-django-tools"
documentation = "https://github.com/NateScarlet/graphene-django-tools/tree/master/docs"
keywords = ["graphene", "django", "graphql"]
classifiers = [
    'Framework :: Django :: 2.1',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3.0',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.7"
graphene = "^2.1"
isodate = "^0.6"
lazy-object-proxy = "^1.4"
graphene-resolver = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^3.7"
pytest-cov = "^2.8"
autopep8 = "^1.4"
rope = "^0.16"
pylint = "^2.4"
pylint-django = "^2.0"
django = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
